--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <main>
 	<h2 id="1.1">Про мене</h2>
 	<section>
-	<strong>Мене звати Артур, мені 14 років. Я навчаюся у 8 классі.</strong>
+	<strong>Мене звати Артур, мені 14 років. Я навчаюся у 8 классі.Після закінчення курсу css я захтів піти далі.Ще я зараз на 3 курсі по Пайтон</strong>
 </section>
 
 
