--- a/age.html
+++ b/age.html
@@ -6,18 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age</title>
     <link rel="stylesheet" type="text/css" href="css/age.css"> 
-	
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .message {
+            font-size: 24px;
+            font-weight: bold;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-
-	<script type="text/javascript">
-		let age = +prompt("Введіть Ваш вік", '55');
-		if(age>=18 && age<=100){
-			document.write("<div>Доступ до сайту надано</div>");
-		} else{
-			document.write("<div>Вхід заборонено, повертайтесь коли вам виповниться 18</div>");
-		}
-	</script>
-
+	<div class="message">
+		<script type="text/javascript">
+			let age = +prompt("Введіть Ваш вік", '55');
+			if(age >= 18 && age <= 100){
+				document.write("Доступ до сайту надано");
+			} else {
+				document.write("Вхід заборонено, повертайтесь коли вам виповниться 18");
+			}
+		</script>
+	</div>
 </body>
 </html>
